# ros-cyber

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.vuln.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ACKNOWLEDGEMENTS.md  ALERT_FILTERS.md  ALERT_RULES.md  API_REFERENCE.md  ARCHITECTURE.md  ATTACK_REPLAY.md  AUDIT_FILTERS.md  CHARTS.md  DEMO_GUIDE.md  EXPORTS.md  FLEET_HEALTH.md  HARDENING_GUIDE.md  LOCAL_MODE.md  LOG_STREAMING.md  MAP.md  PENTEST_REPORT.md  REQUIREMENTS.md  ROLE_BASED_UI.md  SCRIPTS.md  THREAT_MODEL.md  TOKENS.md  TROUBLESHOOTING.md
docs/adr/: 001-monorepo-structure.md  002-redis-streams-event-bus.md
infra/docker/: Dockerfile  Dockerfile.ros2
infra/grafana/: dashboard.json
infra/prometheus/: prometheus.yml
labs/poc/: rc001_jwt_alg_none.py  rc002_idor_telemetry.py
policies/: cmd_vel.yaml
ros2_ws/scripts/: attack_injector.py  fleet_simulator.py
scripts/: demo-attack.ps1  demo-seed.ps1  demo_attack.py  docker-down.ps1  docker-up.ps1  export-alerts.ps1  export-audit.ps1  local-dev.ps1  open-dashboard.ps1  open-reports.ps1  setup_github.ps1  status.ps1  stop-local.ps1  stream-logs.ps1
src/roscyber/: __init__.py
src/roscyber/cli/: main.py
src/roscyber/dashboard/: app.py
src/roscyber/detection/: engine.py  mitre_map.py  worker.py
src/roscyber/ingestion/: app.py  auth.py  schemas.py
src/roscyber/policy/: app.py  engine.py
src/roscyber/scanner/: scanner.py
src/roscyber/shared/: config.py  database.py  logging.py  metrics.py  models.py  redis_client.py
tests/: conftest.py
tests/e2e/: test_security_regression.py
tests/integration/: test_dashboard_api.py  test_ingestion_api.py  test_policy_api.py
tests/unit/: test_auth.py  test_config.py  test_coverage_boost.py  test_detection_engine.py  test_mitre_map.py  test_policy_engine.py  test_redis_worker.py  test_scanner.py  test_scanner_full.py
